--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "resend": "^4.1.2",
     "tailwindcss": "3.4"
   },
   "devDependencies": {
