--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/full-screen": "^3.12.0",
     "@react-pdf-viewer/zoom": "^3.12.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^12.4.10",
     "lottie-react": "^2.4.1",
